<resources>
    <string name="app_name">Box-Quiz</string>
    <string name="open_box">Open Box</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="menu">Menu</string>
    <string name="box">Box</string>
    <string name="select_box">Select Box</string>
    <string name="about_the_application">About the Application</string>
    <string name="application_name">Application Name:</string>
    <string name="version_name">Version Name:</string>
    <string name="version_code">Version Code:</string>
    <string name="ok">OK</string>
    <string name="select_the_number_of_boxes">Select the number of boxes</string>
    <string name="enable_timer">Enable Timer</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_text_box">Please select text box</string>
    <string name="timer_value">Timer: %1$d sec.</string>
    <string name="the_end">The End</string>
    <string name="timer_end_message">Oops, there is no enough time, try again later.</string>
    <string name="box_title">Box #%1$d</string>
    <string name="empty_box">This box is empty. Try another one.</string>
    <string name="icon_done">Icon Done</string>
    <string name="congratulation">Congratulation!</string>
    <string name="to_main_menu">To main menu</string>

    <plurals name="boxes">
        <item quantity="zero">%1$d boxes</item>
        <item quantity="one">%1$d boxes</item>
        <item quantity="two">%1$d boxes</item>
        <item quantity="few">%1$d boxes</item>
        <item quantity="many">%1$d boxes</item>
        <item quantity="other">%1$d boxes</item>
    </plurals>
</resources>