<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bt_open_box"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/open_box"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/bt_options" />

    <Button
        android:id="@+id/bt_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/options"
        app:layout_constraintTop_toBottomOf="@id/bt_open_box"
        app:layout_constraintBottom_toTopOf="@id/bt_about"
        app:layout_constraintStart_toStartOf="@id/bt_open_box"
        app:layout_constraintEnd_toEndOf="@id/bt_open_box"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/bt_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        app:layout_constraintTop_toBottomOf="@id/bt_options"
        app:layout_constraintStart_toStartOf="@id/bt_options"
        app:layout_constraintEnd_toEndOf="@id/bt_options"
        app:layout_constraintBottom_toTopOf="@id/bt_exit"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintTop_toBottomOf="@id/bt_about"
        app:layout_constraintStart_toStartOf="@id/bt_about"
        app:layout_constraintEnd_toEndOf="@id/bt_about"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>